--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^5.0.1",
     "@types/express-mongo-sanitize": "^1.3.2",
     "@types/helmet": "^0.0.48",
+    "@types/http-status": "^0.2.30",
     "@types/mongodb": "^4.0.6",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.17",
@@ -47,6 +48,7 @@
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
+    "http-status": "^2.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
     "winston": "^3.17.0"
