--- a/package.json
+++ b/package.json
@@ -1,56 +1,32 @@
 {
   "name": "halogen-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "TypeScript backend for Halogen",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "node dist/server.js",
     "build": "tsc",
-    "serve": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,json}'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/compression": "^1.7.5",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "^2.8.18",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.1",
-    "@types/express-mongo-sanitize": "^1.3.2",
-    "@types/helmet": "^0.0.48",
-    "@types/http-status": "^0.2.30",
-    "@types/mongodb": "^4.0.6",
-    "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.15.17",
-    "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.5",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.0.0",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.5.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@vinejs/vine": "^3.0.1",
-    "compression": "^1.8.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "helmet": "^8.1.0",
-    "http-status": "^2.1.0",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.14.2",
-    "winston": "^3.17.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
+    "mongoose": "^7.6.3",
+    "winston": "^3.10.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.49.0",
+    "prettier": "^3.0.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
