cache the env config to prevent multiple validations.

--- a/package.json
+++ b/package.json
@@ -2,30 +2,43 @@
   "name": "halogen-backend",
   "version": "1.0.0",
   "description": "TypeScript backend for Halogen",
+  "type": "module",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "node .esbuild/esbuild.config.cjs",
+    "build:watch": "node .esbuild/esbuild-watchmode.cjs",
+    "start": "npm run clean && npm run build && node --enable-source-maps dist/server.js",
+    "start:watch": "nodemon -q --enable-source-maps dist/server.js",
+    "predev": "npm run build",
+    "dev": "cross-env NODE_ENV=development concurrently -n 'server,build' \"npm run start:watch\" \"npm run build:watch\"",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@vinejs/vine": "^3.0.1",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http-status-codes": "^2.2.0",
     "mongoose": "^7.6.3",
     "winston": "^3.10.0",
-    "zod": "^3.22.4"
+    "http-status-codes": "^2.2.0",
+    "zod": "^3.22.4",
+    "dotenv": "^16.3.1",
+    "@vinejs/vine": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.20.2",
+    "esbuild-node-externals": "^1.13.1",
     "eslint": "^8.49.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
