--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
-    "winston": "^3.10.0",
-    "http-status-codes": "^2.2.0",
-    "zod": "^3.22.4",
+    "@vinejs/vine": "^2.0.0",
     "dotenv": "^16.3.1",
-    "@vinejs/vine": "^2.0.0"
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
+    "mongoose": "^7.6.3",
+    "twilio": "^5.6.1",
+    "winston": "^3.10.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.3",
+    "@types/twilio": "^3.19.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "bcrypt": "^6.0.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "esbuild": "^0.20.2",
